tests/ui/coherence/coherence-impls-sized.stderr
error[E0322]: explicit impls for the `Sized` trait are not permitted
  --> $DIR/coherence-impls-sized.rs:14:1
   |
LL | impl Sized for TestE {}
   | ^^^^^^^^^^^^^^^^^^^^ impl of `Sized` not allowed

error[E0322]: explicit impls for the `Sized` trait are not permitted
  --> $DIR/coherence-impls-sized.rs:17:1
   |
LL | impl Sized for MyType {}
   | ^^^^^^^^^^^^^^^^^^^^^ impl of `Sized` not allowed

error[E0322]: explicit impls for the `Sized` trait are not permitted
  --> $DIR/coherence-impls-sized.rs:20:1
   |
LL | impl Sized for (MyType, MyType) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ impl of `Sized` not allowed

error[E0322]: explicit impls for the `Sized` trait are not permitted
  --> $DIR/coherence-impls-sized.rs:23:1
   |
LL | impl Sized for &'static NotSync {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ impl of `Sized` not allowed

error[E0322]: explicit impls for the `Sized` trait are not permitted
  --> $DIR/coherence-impls-sized.rs:26:1
   |
LL | impl Sized for [MyType] {}
   | ^^^^^^^^^^^^^^^^^^^^^^^ impl of `Sized` not allowed

error[E0322]: explicit impls for the `Sized` trait are not permitted
  --> $DIR/coherence-impls-sized.rs:29:1
   |
LL | impl Sized for &'static [NotSync] {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ impl of `Sized` not allowed

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0322`.
